# rays

./: Cargo.toml  README.md
script/: run.sh  setup.sh
script/hooks/: commit-msg  pre-commit
src/: action.rs  ecs.rs  hittable.rs  main.rs  world.rs
src/math/: interpolate.rs  ivec3.rs  mod.rs  ray.rs  sphere.rs  uvec3.rs  vec2.rs  vec3.rs
src/model/: camera.rs  mod.rs  model.rs  terrain.rs
src/system/: camera.rs  fps.rs  input.rs  mod.rs  picking.rs  quit.rs  render.rs  xray.rs
src/view/: event.rs  mod.rs  renderer.rs  settings.rs
