[package]
name = "rays"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic_refcell = "0.1.8"
pixels = "0.9.0"
rayon = "1.5"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
winit = "0.27"
winit_input_helper = "0.13"
