[package]
name = "rays"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic_refcell = "0.1.8"
noise = "0.8.2"
pixels = "0.10.0"
rand = { version = "0.8.5", features = [], default-features = false }
rand_xorshift = "0.3.0"
rayon = "1.5"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
winit = "0.27"
winit_input_helper = "0.13"
